[gd_scene load_steps=2 format=3 uid="uid://x3ro5qk68spf"]

[ext_resource type="Script" uid="uid://b3fekqvucqsyl" path="res://scenes/menu/new_save_menu.gd" id="1_oxvhk"]

[node name="NewSaveMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxvhk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -139.5
offset_right = 225.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="SaveNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveFileLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SaveFile" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="ErrorMsg" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)

[node name="Create" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2

[connection signal="text_changed" from="VBoxContainer/SaveName" to="." method="_on_save_name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/SaveFile" to="." method="_on_save_file_text_changed"]
[connection signal="pressed" from="VBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
